# serenity.rs

./: Cargo.toml  build.rs
src/: constants.rs  error.rs  lib.rs  prelude.rs
src/client/: context.rs  dispatch.rs  error.rs  event_store.rs  mod.rs
src/client/gateway/: prep.rs  shard.rs
src/core/: colour.rs  error.rs  mod.rs
src/core/builder/: create_embed.rs
src/core/model/: channel.rs  event.rs  guild.rs  id.rs  invite.rs  misc.rs  mod.rs  user.rs  utils.rs  webhook.rs
src/core/model/event/: gateway.rs  mod.rs  voice.rs
src/core/utils/: mod.rs
src/ext/cache/: mod.rs
src/ext/framework/: configuration.rs  help_commands.rs
src/ext/voice/: connection.rs  handler.rs  manager.rs
src/gateway/: error.rs  mod.rs  prep.rs  shard.rs
src/internal/: macros.rs  mod.rs  prelude.rs  ws_impl.rs
src/rest/: error.rs  mod.rs  ratelimiting.rs
src/utils/: mod.rs
tests/: test_prelude.rs
