[package]
authors = ["Austin Hellyer <hello@austinhellyer.me>"]
build = "build.rs"
description = "Ergonomic and high-level Rust library for the Discord API."
documentation = "https://serenity.zey.moe"
homepage = "https://github.com/zeyla/serenity.rs"
keywords = ["discord", "api"]
license = "ISC"
name = "serenity"
readme = "README.md"
repository = "https://github.com/zeyla/serenity.rs.git"
version = "0.2.0"

[dependencies]
base64 = "0.2"
bitflags = "0.7"
flate2 = "0.2"
lazy_static = "0.2"
log = "0.3"
serde_json = "0.8"
time = "0.1"
typemap = "0.3"
websocket = "0.17"

[dependencies.byteorder]
optional = true
version = "0.5"

[dependencies.cookie]
default-features = false
optional = true
version = "0.2"

[dependencies.hyper]
optional = true
version = "0.9"

[dependencies.multipart]
default-features = false
features = ["client", "hyper"]
version = "0.8"

[dependencies.opus]
optional = true
version = "0.1"

[dependencies.sodiumoxide]
default-features = false
optional = true
version = "0.0.12"

[build-dependencies]
yaml-rust = "0.3"

[features]
default = ["cache", "client", "framework", "methods"]
cache = []
client = ["gateway", "rest"]
debug = []
framework = ["client"]
gateway = ["rest"]
methods = ["rest"]
rest = ["cookie", "hyper"]
voice = ["byteorder", "opus", "sodiumoxide"]
