[package]
authors = ["Austin Hellyer <hello@austinhellyer.me>"]
build = "build.rs"
description = "Ergonomic and high-level Rust library for the Discord API."
documentation = "https://serenity.zey.moe"
homepage = "https://github.com/zeyla/serenity.rs"
keywords = ["discord", "api"]
license = "ISC"
name = "serenity"
readme = "README.md"
repository = "https://github.com/zeyla/serenity.rs.git"
version = "0.2.0"

[dependencies]
bitflags = "0.7"
log = "0.3"
serde_json = "0.8"
time = "0.1"

[dependencies.base64]
optional = true
version = "0.2"

[dependencies.byteorder]
optional = true
version = "0.5"

[dependencies.cookie]
default-features = false
optional = true
version = "0.2"

[dependencies.flate2]
optional = true
version = "0.2"

[dependencies.hyper]
optional = true
version = "0.9"

[dependencies.lazy_static]
optional = true
version = "0.2"

[dependencies.multipart]
default-features = false
features = ["client", "hyper"]
version = "0.8"

[dependencies.opus]
optional = true
version = "0.1"

[dependencies.sodiumoxide]
default-features = false
optional = true
version = "0.0.12"

[dependencies.typemap]
optional = true
version = "0.3"

[dependencies.websocket]
optional = true
version = "0.17"

[build-dependencies]
yaml-rust = "0.3"

[features]
default = ["cache", "client", "framework", "methods", "utils"]
cache = []
client = ["gateway", "lazy_static", "typemap", "rest"]
debug = []
framework = ["client"]
gateway = ["flate2", "rest", "websocket"]
methods = ["rest"]
rest = ["cookie", "hyper", "lazy_static"]
utils = ["base64"]
voice = ["byteorder", "gateway", "opus", "sodiumoxide"]
